Fix search APIs
